--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,7 @@
 [uwsgi]
-http = :80
 
 #the local unix socket file than commnuincate to Nginx   用于和 nginx 进行数据交互的端口
-socket = 127.0.0.1:80
+socket = :80
 
 # the base directory (full path)  django 程序的主目录
 chdir = /home/news_backend
